# project-smith

./: .gitignore  CHANGELOG.md  Deep_test.py  Dockerfile.daemon  LICENSE  ddg_news_test.txt  ddg_test.txt  docker-compose.yml  env.template  google_raw_test.txt  google_test.txt  instance_test.txt  new_tools_test.txt  news_test_output.txt  pyproject.toml  readme.md  searxng_test.txt  smith_dag_1770990423.json  smith_dag_1771057282.json  smith_dag_1771558172.json  smith_dag_1771558704.json  smith_dag_1771695045.json  smith_dag_1776680299.json  smith_dag_1776681654.json  smith_session_1770993839.md  test_new_tools.py  test_output.txt  test_tool_registry.py  tests_output.txt  tool_registry_report.txt  trace_dump.json
.github/workflows/: ci.yml
docs/: README.md  advanced-features.md  api-reference.md  architecture.md  contributing.md  credits.md  deployment.md  development-log.md  folderstructure.md  orchestrator.md  planner.md  quickstart.md  tools-spec.md  troubleshooting.md
scripts/: debug_manual.py  inspect_traces.py  list_models.py  live_test_ops.py  stress_test.py  test_llm.py  test_web_scraper.py  validate_refactor.py  verify_live_setup.py
smith/: DB_TOOLS.py  orchestrator.py  planner.py  tool_loader.py  tools_populator.py
smith/tools/: ARXIV_FETCHER.py  DB_TOOLS.py  FINANCE.py  GOOGLE_SEARCHER.py  LLM_CALLER.py  TOOL_DIAGNOSTICS.py  WEATHER_FETCHER.py
src/smith/: DB_TOOLS.py  config.py  orchestrator.py  planner.py  registry.py  tool_loader.py  tools_populator.py  utils_missing.py
src/smith/cli/: main.py  voice_mode.py
src/smith/core/: agent_state.py  agent_voice_module.py  cache_manager.py  events.py  fabrication_guard.py  fleet_coordinator.py  format_detector.py  input_validators.py  logging.py  orchestrator.py  quality.py  query_router.py  report_renderer.py  resource_lock.py  run_context.py  synthesis_engine.py  synthesis_router.py  template_engine.py  throttling.py  validators.py
src/smith/memory/: __init__.py  embedder.py  manager.py  store.py
src/smith/tools/: ARXIV_FETCHER.py  CODE_AGENT.py  CODE_ASSISTANT.py  CRYPTO_FETCHER.py  DB_TOOLS.py  DEEP_SUMMARIZER.py  FINANCE.py  FINANCIAL_CALCULATOR.py  GMAIL.py  GOOGLE_SEARCHER.py  LLM_CALLER.py  NEWS_CLUSTERER.py  NEWS_FETCHER.py  NUMERIC_COMPUTER.py  SEC_FILINGS.py  SUB_AGENT.py  TECHNICAL_INDICATORS.py  TOOL_DIAGNOSTICS.py  URL_READER.py  WEATHER_FETCHER.py  WEB_SCRAPER.py  WIKIPEDIA_LOOKUP.py  registry.json
tests/: conftest.py  quick_tests.py  stress_test_runner.py  test_dag_failure_handling.py  test_fixes.py  test_llm_caller.py  test_orchestrator.py  test_orchestrator_loads.py  test_planner.py  test_polish.py  test_results.json
